<resources>
    <string name="title_app_name" translatable="false">Looking</string>
    <string name="title_search">Search</string>
    <string name="title_saved">Saved</string>
    <string name="title_booking">Bookings</string>
    <string name="title_account">Account</string>
    <string name="city">Enter destination</string>
    <string name="date">Enter dates</string>
    <string name="humans">Enter guests</string>
    <string name="searchButton">Search</string>
    <string name="App_name" translatable="false">Looking</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="january">Jan</string>
    <string name="february">Feb</string>
    <string name="march">Mar</string>
    <string name="april">Apr</string>
    <string name="may">May</string>
    <string name="june">Jun</string>
    <string name="july">Jul</string>
    <string name="august">Aug</string>
    <string name="september">Sep</string>
    <string name="october">Oct</string>
    <string name="november">Nov</string>
    <string name="december">Dec</string>
    <string name="nights">nights</string>
    <string name="questsText">Select rooms and quests</string>
    <string name="buttonFilterQuestsText">Apply</string>
    <string name="filterRooms">Rooms</string>
    <string name="filterAdults">Adults</string>
    <string name="filterChildren">Children</string>
    <string name="selectDates">Select dates</string>
    <string name="room">Rooms</string>
    <string name="adult">adults</string>
    <string name="noChildren">No children</string>
    <string name="child">children</string>
    <string name="signIn">Sign in to save hotels as favorites and manage your trips.</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="createAccount">Create your account</string>
    <string name="signWithPhone">Sign in with phone number</string>
    <string name="signWithEmail">Sign in with email</string>
    <string name="singingUp">Signing up</string>
    <string name="singingIn">Signing in</string>
    <string name="enterEmail">Enter email</string>
    <string name="enterPhone">Enter phone number</string>
    <string name="enterSmsCode">Enter sms code</string>
    <string name="enterPassword">Enter password</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="createAccountAndSign">Create account and sign in</string>
    <string name="receiveSms">Receive sms</string>
    <string name="editAccount">Edit account</string>
    <string name="editAccountTitle">Account editing</string>
    <string name="Confirm">Confirm</string>
    <string name="hotelsFound">Hotels found:</string>
    <string name="checkIn">Check-in</string>
    <string name="checkOut">Check-out</string>
    <string name="roomsAndQuests">Rooms and quests</string>
    <string name="description">Description</string>
    <string name="reserve">Reserve</string>
    <string name="cancelBooking">Cancel booking</string>
    <string name="sorryText">Probably for the current dates - (%s) another user has just booked a room, we apologize</string>
    <string name="successText">Successfully booked, a representative of the hotel will contact you in the near future</string>
    <string name="visDatText">First you need to specify the number of visitors and dates</string>
    <string name="haveToLogIn">First you need to log in to your account</string>
    <string name="entryText">Select the date of entry</string>
    <string name="departureText">Select the departure date</string>
    <string name="excellent">Excellent</string>
    <string name="stunningly">Stunningly</string>
    <string name="well">Very well</string>
    <string name="good">Good</string>
    <string name="numberOfRoomsText">Available rooms at the hotel:</string>
</resources>