<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/hostelTitle"
            style="@style/ToolbarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/editAccountTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/back_editing_imageButton"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="15dp"
            android:backgroundTint="?attr/colorOnBackground"
            android:onClick="changeFragment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cross" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/greyLine"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailAddressReg"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextEmailAddressReg"
        style="@style/SingOutEditTexts"
        android:layout_marginTop="180dp"
        android:hint="@string/enterEmail"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <EditText
        android:id="@+id/editTextPasswordReg"
        style="@style/SingOutEditTexts"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/enterPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddressReg" />

    <EditText
        android:id="@+id/editTextRepeatPasswordReg"
        style="@style/SingOutEditTexts"
        android:hint="@string/repeatPassword"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:gravity="start|center"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextPasswordReg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordReg"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordReg" />

    <Button
        android:id="@+id/create_account_and_sign_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/buttonBlue"
        android:fontFamily="sans-serif"
        android:text="@string/createAccountAndSign"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRepeatPasswordReg"
        app:layout_constraintVertical_bias="0.26"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/flagTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/color_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRepeatPasswordReg" />

</androidx.constraintlayout.widget.ConstraintLayout>