<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textColor="?attr/toolbarTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/singingIn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/back_email_imageButton"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:backgroundTint="?attr/colorOnBackground"
            android:onClick="changeFragment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.126"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.583"
            app:srcCompat="@drawable/ic_angle_left" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/greyLine"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailAddressSign"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextEmailAddressSign"
        style="@style/SingOutEditTexts"
        android:layout_marginTop="180dp"
        android:hint="@string/enterEmail"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <EditText
        android:id="@+id/editTextPasswordSing"
        style="@style/SingOutEditTexts"
        android:layout_marginTop="40dp"
        android:hint="@string/enterPassword"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailAddressSign"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddressSign" />


    <Button
        android:id="@+id/sign_in_with_email_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/buttonBlue"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:text="@string/sign_in"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordSing"
        app:layout_constraintVertical_bias="0.26"
        tools:layout_editor_absoluteX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>