<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/App_name"
            style="@style/ToolbarText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/back_imageButton"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:backgroundTint="?attr/colorOnBackground"
            android:onClick="changeFragment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.126"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.583"
            app:srcCompat="@drawable/ic_angle_left" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/create_account_button"

        style="@style/AuthButtons"
        android:text="@string/createAccount"

        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <Button
        android:id="@+id/sign_with_google_button"

        style="@style/AuthButtons"
        android:text="@string/signWithGoogle"

        android:layout_marginTop="116dp"
        app:layout_constraintStart_toStartOf="@+id/create_account_button"
        app:layout_constraintTop_toBottomOf="@+id/create_account_button" />

    <Button
        android:id="@+id/sign_with_email_button"

        style="@style/AuthButtons"
        android:text="@string/signWithEmail"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_with_google_button"
        app:layout_constraintVertical_bias="0.046"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="9dp" />

</androidx.constraintlayout.widget.ConstraintLayout>